syntax = "proto3";

package translator;

option go_package = "voice-translator/internal/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string first_name = 1;
}

service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse);
    rpc GreetServerStream(GreetRequest) returns (stream GreetResponse);
    rpc GreetClientStream(stream GreetRequest) returns (GreetResponse);
    rpc GreetBiDirectionStream(stream GreetRequest) returns (stream GreetResponse);
    rpc GreetWithDeadline(GreetRequest) returns (GreetResponse);
}
